{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 339,
  "lineage": "83f9c85a-6719-a98d-1fe8-7d7ad9cce375",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:loadbalancer/app/mzc-user05-alb/1f8dd099d78b29d3",
            "arn_suffix": "app/mzc-user05-alb/1f8dd099d78b29d3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mzc-user05-alb-158233501.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382777416:loadbalancer/app/mzc-user05-alb/1f8dd099d78b29d3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mzc-user05-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-090bb73a7c0dd7adb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ac8564671d671182"
              },
              {
                "subnet_id": "subnet-0da5f49ef168d9d1b"
              }
            ],
            "subnets": [
              "subnet-0ac8564671d671182",
              "subnet-0da5f49ef168d9d1b"
            ],
            "tags": {
              "Name": "mzc-user05-alb"
            },
            "tags_all": {
              "Name": "mzc-user05-alb"
            },
            "vpc_id": "vpc-0377713d7436a016f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:listener/app/mzc-user05-alb/1f8dd099d78b29d3/1115c6327856e03b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:targetgroup/mzc-user05-app-tg/dcbc45bacde25287",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382777416:listener/app/mzc-user05-alb/1f8dd099d78b29d3/1115c6327856e03b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:loadbalancer/app/mzc-user05-alb/1f8dd099d78b29d3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.app_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:targetgroup/mzc-user05-app-tg/dcbc45bacde25287",
            "arn_suffix": "targetgroup/mzc-user05-app-tg/dcbc45bacde25287",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382777416:targetgroup/mzc-user05-app-tg/dcbc45bacde25287",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mzc-user05-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mzc-user05-app-tg"
            },
            "tags_all": {
              "Name": "mzc-user05-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:security-group/sg-090bb73a7c0dd7adb",
            "description": "Allow HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090bb73a7c0dd7adb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mzc-user05-alb-sg",
            "name_prefix": "",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mzc-user05-alb-sg"
            },
            "tags_all": {
              "Name": "mzc-user05-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:security-group/sg-08051cdc09b94ee4c",
            "description": "Allow traffic from ALB and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08051cdc09b94ee4c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090bb73a7c0dd7adb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mzc-user05-ec2-sg",
            "name_prefix": "",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mzc-user05-ec2-sg"
            },
            "tags_all": {
              "Name": "mzc-user05-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ed9a2542d9f6737",
            "arn": "arn:aws:ec2:us-west-2:992382777416:elastic-ip/eipalloc-08ed9a2542d9f6737",
            "domain": "vpc",
            "id": "eipalloc-08ed9a2542d9f6737",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-37-71-149.us-west-2.compute.amazonaws.com",
            "public_ip": "52.37.71.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mzc-user05-nat-eip"
            },
            "tags_all": {
              "Name": "mzc-user05-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:internet-gateway/igw-0f2fe90d993d4023d",
            "id": "igw-0f2fe90d993d4023d",
            "owner_id": "992382777416",
            "tags": {
              "Name": "mzc-user05-igw"
            },
            "tags_all": {
              "Name": "mzc-user05-igw"
            },
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ed9a2542d9f6737",
            "association_id": "eipassoc-06a6e68a45b4a06ce",
            "connectivity_type": "public",
            "id": "nat-06797be22bd667a2f",
            "network_interface_id": "eni-0db10011fb8e291a6",
            "private_ip": "10.10.1.152",
            "public_ip": "52.37.71.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da5f49ef168d9d1b",
            "tags": {
              "Name": "mzc-user05-nat-gw"
            },
            "tags_all": {
              "Name": "mzc-user05-nat-gw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:route-table/rtb-02942f0df756833a8",
            "id": "rtb-02942f0df756833a8",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06797be22bd667a2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mzc-user05-private-rt"
            },
            "tags_all": {
              "Name": "mzc-user05-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:route-table/rtb-01d0ee41966aef7cb",
            "id": "rtb-01d0ee41966aef7cb",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2fe90d993d4023d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mzc-user05-public-rt"
            },
            "tags_all": {
              "Name": "mzc-user05-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0a92fc5abf02749",
            "route_table_id": "rtb-02942f0df756833a8",
            "subnet_id": "subnet-04d7add5e5bfaa600"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b9ee74138faaf56",
            "route_table_id": "rtb-02942f0df756833a8",
            "subnet_id": "subnet-0b970f59ec6f0fe81"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07605e3acc1427693",
            "route_table_id": "rtb-01d0ee41966aef7cb",
            "subnet_id": "subnet-0da5f49ef168d9d1b"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ac72e175b946fb7",
            "route_table_id": "rtb-01d0ee41966aef7cb",
            "subnet_id": "subnet-0ac8564671d671182"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:security-group/sg-047afadff5acdbc11",
            "description": "Allow HTTPS from within VPC for Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047afadff5acdbc11",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mzc-user05-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mzc-user05-vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "mzc-user05-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:subnet/subnet-04d7add5e5bfaa600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.128.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d7add5e5bfaa600",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mzc-user05-private-subnet-us-west-2a",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "mzc-user05-private-subnet-us-west-2a",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:subnet/subnet-0b970f59ec6f0fe81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.132.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b970f59ec6f0fe81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mzc-user05-private-subnet-us-west-2b",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "mzc-user05-private-subnet-us-west-2b",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:subnet/subnet-0da5f49ef168d9d1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da5f49ef168d9d1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mzc-user05-public-subnet-us-west-2a",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "mzc-user05-public-subnet-us-west-2a",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:subnet/subnet-0ac8564671d671182",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac8564671d671182",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mzc-user05-public-subnet-us-west-2b",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "mzc-user05-public-subnet-us-west-2b",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:vpc/vpc-0377713d7436a016f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-029178ec50e0e0e87",
            "default_route_table_id": "rtb-0930bc324d10f9d76",
            "default_security_group_id": "sg-077db056e79ecae9f",
            "dhcp_options_id": "dopt-03cb275c7ccef02fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0377713d7436a016f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0930bc324d10f9d76",
            "owner_id": "992382777416",
            "tags": {
              "Name": "mzc-user05-vpc"
            },
            "tags_all": {
              "Name": "mzc-user05-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:vpc-endpoint/vpce-067566d2da3b81ed7",
            "dns_entry": [
              {
                "dns_name": "vpce-067566d2da3b81ed7-x7uu573p.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-067566d2da3b81ed7-x7uu573p-us-west-2a.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-067566d2da3b81ed7-x7uu573p-us-west-2b.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ec2messages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0334252B093691PIST9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-067566d2da3b81ed7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03bcef783abb71c3b",
              "eni-0c54929f1126f86c1"
            ],
            "owner_id": "992382777416",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-047afadff5acdbc11"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2messages",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.128.122",
                "subnet_id": "subnet-04d7add5e5bfaa600"
              },
              {
                "ipv4": "10.10.135.42",
                "subnet_id": "subnet-0b970f59ec6f0fe81"
              }
            ],
            "subnet_ids": [
              "subnet-04d7add5e5bfaa600",
              "subnet-0b970f59ec6f0fe81"
            ],
            "tags": {
              "Name": "mzc-user05-ec2messages-endpoint"
            },
            "tags_all": {
              "Name": "mzc-user05-ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoint_sg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:vpc-endpoint/vpce-05c3ca30556782e84",
            "dns_entry": [
              {
                "dns_name": "vpce-05c3ca30556782e84-3r8d1l4j.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-05c3ca30556782e84-3r8d1l4j-us-west-2a.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-05c3ca30556782e84-3r8d1l4j-us-west-2b.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssm.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z02740692BK6U4Z5YP33J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05c3ca30556782e84",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-083f9b8a7df872fb2",
              "eni-0c064c6d54bafa42c"
            ],
            "owner_id": "992382777416",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-047afadff5acdbc11"
            ],
            "service_name": "com.amazonaws.us-west-2.ssm",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.131.102",
                "subnet_id": "subnet-04d7add5e5bfaa600"
              },
              {
                "ipv4": "10.10.133.4",
                "subnet_id": "subnet-0b970f59ec6f0fe81"
              }
            ],
            "subnet_ids": [
              "subnet-04d7add5e5bfaa600",
              "subnet-0b970f59ec6f0fe81"
            ],
            "tags": {
              "Name": "mzc-user05-ssm-endpoint"
            },
            "tags_all": {
              "Name": "mzc-user05-ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoint_sg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:vpc-endpoint/vpce-047fb94e218dd6d85",
            "dns_entry": [
              {
                "dns_name": "vpce-047fb94e218dd6d85-0s953hgz.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-047fb94e218dd6d85-0s953hgz-us-west-2a.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-047fb94e218dd6d85-0s953hgz-us-west-2b.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssmmessages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z027407727619CPYFEHNW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-047fb94e218dd6d85",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03e31658d08bb436e",
              "eni-04975924d233290d6"
            ],
            "owner_id": "992382777416",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-047afadff5acdbc11"
            ],
            "service_name": "com.amazonaws.us-west-2.ssmmessages",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.129.219",
                "subnet_id": "subnet-04d7add5e5bfaa600"
              },
              {
                "ipv4": "10.10.134.54",
                "subnet_id": "subnet-0b970f59ec6f0fe81"
              }
            ],
            "subnet_ids": [
              "subnet-04d7add5e5bfaa600",
              "subnet-0b970f59ec6f0fe81"
            ],
            "tags": {
              "Name": "mzc-user05-ssmmessages-endpoint"
            },
            "tags_all": {
              "Name": "mzc-user05-ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoint_sg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:security-group/sg-0f838089799129ea7",
            "description": "Allow database traffic from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f838089799129ea7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow DB traffic from EC2 SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08051cdc09b94ee4c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mzc-user05-rds-sg",
            "name_prefix": "",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mzc-user05-rds-sg"
            },
            "tags_all": {
              "Name": "mzc-user05-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377713d7436a016f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.compute.aws_security_group.ec2_sg",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}